# mimas

./: .git-blame-ignore-revs  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
private/: CMakeLists.txt  internal.c  internal.h  mimas.c  mimas_gl.c  mimas_vk.c  platform.h  platform_gl.h  platform_vk.h  utils.c  utils.h
private/linux/: time.c
private/linux/x11/: init.c  init.h  platform.h  vk.c  window.c
private/win/: cursor.c  display.c  file_dialog.c  gl.c  input.c  platform.h  time.c  vk.c  wgl.c  wgl.h  window.c
public/mimas/: mimas.h  mimas_gl.h  mimas_vk.h
